<resources>
    <string name="app_name">Apex Legends Guide</string>
    <string name="made_by_fan" translatable="false">Made by gamers for gamers</string>
    <string name="weapons">Weapons</string>
    <string name="AR">Assault rifle</string>
    <string name="smg">SMG</string>
    <string name="heavy_ar">Machine gun</string>
    <string name="sniper">Precision rifle</string>
    <string name="shotgun">Shotgun</string>
    <string name="pistol">Pistol</string>
    <string name="legends">Legends</string>
    <string name="damage" translatable="false">DPS</string>
    <string name="radar">Radar</string>
    <string name="tank" translatable="false">Tank</string>
    <string name="support">Support</string>
    <string name="les_cartes">Maps</string>
    <string name="type_legends" translatable="false">TYPE_LEGENDS</string>
    <string name="type_weapons" translatable="false">TYPE_WEAPONS</string>
    <string name="description_V47_flatline">The VK-47 Flatline is an assault rifle which uses Heavy Rounds. It has a
        magazine of 20 (without attachments). It does 16 damage per shot and 32 per headshot. The Flatline is able to
        switch between single and automatic firing modes
    </string>
    <string name="stats_V47_flatline" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 16</li>
<li><b>Headshot Damage:</b> 32 (2x)</li>
<li><b>Base Rate of Fire:</b> 600 RPM</li>
<li><b>Base Magazine Capacity:</b> 20</li>
<li><b>Ammo Type:</b> <a href="/Heavy_Rounds" title="Heavy Rounds">Heavy Rounds</a></li></ul>]]></string>
    <string name="procons_V47_flatline" translatable="false"><![CDATA[
<b>Pros</b><ul><li><i>2x Headshot Multiplier</i></li>
<li><i>High Damage</i></li>
<li><i>Good Performance at close/medium range</i></li>
<li>Good Ammo Depletion Time</li></ul><b>Cons</b><ul><li>Poor Accuracy</li>
<li>Poor Long Range Performance</li></ul>]]></string>
    <string name="description_R301_Carbine">The R-301 Carbine is an assault rifle weapon which uses Light rounds. It has
        a magazine of 18 (without attachments). It does 14 damage per shot, and 28 per headshot. The R-301 Carbine is
        able to switch between single and automatic firing modes
    </string>
    <string name="stats_R301_Carbine" translatable="false"><![CDATA[<ul>
            <li>
                <b>Base Damage:</b>
                14
            </li>
            <li>
                <b>Leg Damage:</b>
                11 (0.78x)
            </li>
            <li>
                <b>Headshot Damage:</b>
                28 (2x)
            </li>
            <li>
                <b>Base Rate of Fire:</b>
                720 RPM
            </li>
            <li>
                <b>Base Magazine Capacity:</b>
                18
            </li>
            <li>
                <b>Ammo Type:</b>
                <a href="/Light_Rounds" title="Light Rounds">Light Rounds</a>
            </li>
        </ul>]]></string>
    <string name="procons_R301_Carbine" translatable="false"><![CDATA[
<b>Pros</b>
<ul><li><i>High Accuracy</i></li>
<li><i>2x Headshot Multiplier</i></li>
<li><i>High Rate of Fire</i></li>
<li><i>Good Performance at close/medium range</i></li>
<li><i>Excellent Performance at Long Range</i></li></ul>
<b>Cons</b>
<ul><li><i>Low Damage</i></li>
<li><i>Low Base Ammo Capacity</i></li></ul>]]></string>
    <string name="description_hemlok">The Hemlok Burst AR is an assault rifle which uses Heavy Rounds. It has a magazine
        of 18 (without attachments). It does 18 damage per shot and 24 per headshot. It is able to toggle between single
        and 3 round burst firing modes
    </string>
    <string name="stats_hemlok" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 18 per bullet, 54 (3x18) per full 3 round burst</li>
<li><b>Leg Damage:</b> 14 per bullet (0.78x), 42 (3x14) per full 3 round burst</li>
<li><b>Headshot Damage:</b> 24 per bullet (1.33X), 72 (3x24) per full 3 round burst</li>
<li><b>Base Rate of Fire:</b> 490 RPM</li>
<li><b>Base Magazine Capacity:</b> 18</li>
<li><b>Ammo Type:</b> <a href="/Heavy_Rounds" title="Heavy Rounds">Heavy Rounds</a></li></ul>]]></string>
    <string name="procons_hemlok" translatable="false"><![CDATA[
<b>Pros</b><ul><li><i>High Accuracy</i></li>
<li><i>High Burst Damage</i></li>
<li><i>Good Medium/Long Range</i></li>
<li><i>Good Burst Rate Of Fire</i></li></ul><b>Cons</b><ul><li><i>Low Overall Rate Of Fire</i></li>
<li>1.25X Headshot Multiplier</li>
<li><i>Low Base Ammo Capacity</i></li>
<li><i>Poor Close Range Performance</i></li></ul>]]></string>
    <string name="description_alternator">The Alternator SMG is a sub machine gun weapon in Apex Legends. As the name
        implies, it fires through two alternating barrels
    </string>
    <string name="stats_alternator" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 13</li>
<li><b>Leg Damage:</b> 11</li>
<li><b>Headshot Damage:</b> 19 (1.46x)</li>
<li><b>Base Rate of Fire:</b> 640 RPM</li>
<li><b>Base Magazine Capacity:</b> 16</li>
<li><b>Ammo Type:</b> <a href="/Light_Rounds" title="Light Rounds">Light Rounds</a></li></ul>]]></string>
    <string name="description_R99">The R-99 is a sub machine gun weapon in Apex Legends</string>
    <string name="stats_R99" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 12</li>
<li><b>Headshot Damage:</b> 18 (1.5x)</li>
<li><b>Base Rate of Fire:</b> 1080 RPM</li>
<li><b>Base Magazine Capacity:</b> 18</li>
<li><b>Ammo Type:</b> <a href="/Light_Rounds" title="Light Rounds">Light Rounds</a></li></ul>]]></string>
    <string name="description_prowler">The Prowler Burst PDW is a sub machine gun weapon in Apex Legends that fires in a
        5-round burst, unless you have the Selectfire Receiver Hop-Up attachment, in which case it can be enabled into
        fully automatic fire
    </string>
    <string name="stats_prowler" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 14 per bullet, 70 (5x14) per full 5 round burst</li>
<li><b>Headshot Damage:</b> 21 (1.5x) per bullet, 105 (5x21) per full 5 round burst</li>
<li><b>Base Rate of Fire:</b> 800 RPM</li>
<li><b>Base Magazine Capacity:</b> 20</li>
<li><b>Ammo Type:</b> <a href="/Heavy_Rounds" title="Heavy Rounds">Heavy Rounds</a></li></ul>]]></string>
    <string name="description_spitfire">The M600 Spitfire is a light machine gun weapon in Apex Legends.</string>
    <string name="stats_spitfire" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 20</li>
<li><b>Headshot Damage:</b> 40 (2x)</li>
<li><b>Base Rate of Fire:</b> 512 RPM</li>
<li><b>Base Magazine Capacity:</b> 35</li>
<li><b>Ammo Type:</b> <a href="/Heavy_Rounds" title="Heavy Rounds">Heavy Rounds</a></li></ul>]]></string>
    <string name="description_devotion">The Devotion is a light machine gun weapon that takes energy ammo to use and has
        a unique spin-up mechanic. This means that the longer the gun is fired continuously, the faster the fire rate
        will become. This weapon can be difficult to find ammo for because of this rapid ammo consuming feature and the
        fact that it is one of only two energy weapons in the game, the other being the Triple Take sniper rifle. This
        weapon\'s hop-up is called turbocharger and it increases the speed at which the gun will spin-up.
    </string>
    <string name="stats_devotion" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 17</li>
<li><b>Headshot Damage:</b> 34 (2x)</li>
<li><b>Base Rate of Fire:</b> 900 RPM</li>
<li><b>Base Magazine Capacity:</b> 44</li>
<li><b>Ammo Type:</b> <a href="/Energy_Ammo" title="Energy Ammo">Energy Ammo</a></li></ul>]]></string>
    <string name="description_triple_take">The Triple Take is a sniper weapon in Apex Legends.</string>
    <string name="stats_triple_take" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 23 per projectile, 69 total</li>
<li><b>Headshot Damage:</b> 46 per projectile (2x), 138 total</li>
<li><b>Base Rate of Fire:</b> 88 RPM</li>
<li><b>Base Magazine Capacity:</b> 5</li>
<li><b>Ammo Type:</b> <a href="/Energy_Ammo" title="Energy Ammo">Energy Ammo</a></li></ul>]]></string>
    <string name="description_longbow">The Longbow DMR is a sniper weapon in Apex Legends.</string>
    <string name="stats_longbow" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 55</li>
<li><b>Headshot Damage:</b> 110 (2x)</li>
<li><b>Base Rate of Fire:</b> 86 RPM</li>
<li><b>Base Magazine Capacity:</b> 5</li>
<li><b>Ammo Type:</b> <a href="/Heavy_Rounds" title="Heavy Rounds">Heavy Rounds</a></li></ul>]]></string>
    <string name="description_G7">The G7 Scout is a sniper weapon in Apex Legends.</string>
    <string name="stats_G7" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 30</li>
<li><b>Headshot Damage:</b> 60 (2x)</li>
<li><b>Base Rate of Fire:</b> 273 RPM</li>
<li><b>Base Magazine Capacity:</b> 10</li>
<li><b>Ammo Type:</b> <a href="/Light_Rounds" title="Light Rounds">Light Rounds</a></li></ul>]]></string>
    <string name="description_kraber">The Kraber .50 CAL is a special level 4 (Legendary) rarity bolt action magazine
        fed sniper rifle only obtainable from air drops (not included in airdrops summoned by Lifeline\'s ultimate
        ability). This is the most powerful sniper in the game, but also the rarest, as it is only obtainable in this
        special way. It is uses its own unique ammo type that takes no inventory space, and thus cannot be dropped or
        looted separately from the weapon itself.
    </string>
    <string name="stats_kraber" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 125</li>
<li><b>Headshot Damage:</b> 250 (2x)</li>
<li><b>Base Rate of Fire:</b> 36 RPM</li>
<li><b>Base Magazine Capacity:</b> 4</li>
<li><b>Ammo Type:</b> 8 (4+4) Special Ammo that cannot be replenished nor dropped.</li></ul>]]></string>
    <string name="description_peacekeeper">The Peacekeeper is a lever action clip fed shotgun that fires 11 pellets in
        the shape of a star (1 pellet in the middle and 2 on each outer line of the star shape).
    </string>
    <string name="stats_peacekeeper" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 10 per pellet, 110 (11x10) for all 11 pellets</li>
<li><b>Headshot Damage:</b> 15 per pellet (1.5x), 165 (11x15) for all 11 pellets</li>
<li><b>Base Rate of Fire:</b> 58 RPM</li>
<li><b>Base Magazine Capacity:</b> 6</li>
<li><b>Ammo Type:</b> <a href="/Shotgun_Shells" title="Shotgun Shells">Shotgun Shells</a></li></ul>]]></string>
    <string name="description_EVA8">The EVA-8 Auto is a fully automatic magazine fed shotgun that fires 9 pellets in the
        shape of the number 8.
    </string>
    <string name="stats_EVA8" translatable="false"><![CDATA[<ul><li><b>Base Damage:</b> 7 per pellet, 63 (9x7) for all 9 pellets</li>
<li><b>Headshot Damage:</b> 10 per pellet (1.43x), 90 (9x10) for all 9 pellets</li>
<li><b>Base Rate of Fire:</b> 128 RPM</li>
<li><b>Base Magazine Capacity:</b> 8</li>
<li><b>Ammo Type:</b> <a href="/Shotgun_Shells" title="Shotgun Shells">Shotgun Shells</a></li></ul>]]></string>
    <string name="description_mozambique">The Mozambique Shotgun is a clip fed triple-barrel shotgun pistol that uses
        shotgun attachments. It fires 3 pellets, one from each barrel, in the shape of a triangle, with the top middle
        pellet hitting the place of the red dot while aiming down its iron sights
    </string>
    <string name="tab_informations" translatable="false">Informations</string>
    <string name="tab_stats" translatable="false">Stats</string>
    <string name="description" translatable="false">Description</string>
    <string name="stats" translatable="false">Stats</string>
    <string name="pros_amp_cons">Pros &amp; Cons</string>
</resources>