<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

        <!-- COMMON -->

        <com.google.android.material.tabs.TabLayout android:id="@+id/tab_layout"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    app:layout_constraintTop_toTopOf="parent"
                                                    app:layout_constraintStart_toStartOf="parent"
                                                    app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:text="@string/tab_informations"/>
            <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:text="@string/tab_stats"/>
        </com.google.android.material.tabs.TabLayout>

        <!-- Tab 1 -->
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/layout_informations"
                                                           android:layout_width="0dp"
                                                           android:layout_height="0dp"
                                                           app:layout_constraintTop_toBottomOf="@id/tab_layout"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           app:layout_constraintBottom_toBottomOf="parent">
            <ScrollView android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content">
                    <ImageView android:id="@+id/picture"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               app:layout_constraintTop_toTopOf="parent"
                               app:layout_constraintRight_toRightOf="parent"
                               app:layout_constraintLeft_toLeftOf="parent"
                               android:adjustViewBounds="true"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/layout_title_informations"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/picture"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:background="@drawable/bg">

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:id="@+id/tv_title_informations"
                                  android:text="@string/description"
                                  app:layout_constraintTop_toTopOf="parent"
                                  app:layout_constraintLeft_toLeftOf="parent"
                                  app:layout_constraintBottom_toBottomOf="parent"
                                  android:textSize="@dimen/h3"
                                  android:textStyle="bold"
                                  android:textColor="@android:color/white"
                                  android:layout_margin="8dp"
                        />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView android:layout_width="wrap_content"
                              android:id="@+id/tv_informations"
                              android:layout_height="wrap_content"
                              app:layout_constraintTop_toBottomOf="@id/layout_title_informations"
                              app:layout_constraintLeft_toLeftOf="parent"
                              android:layout_margin="8dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Tab 2 -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_stats"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tab_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
            <ScrollView android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content">



                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/layout_title_stats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:background="@drawable/bg">

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:id="@+id/tv_title_stats"
                                  android:text="@string/stats"
                                  app:layout_constraintTop_toTopOf="parent"
                                  app:layout_constraintLeft_toLeftOf="parent"
                                  app:layout_constraintBottom_toBottomOf="parent"
                                  android:textSize="@dimen/h3"
                                  android:textStyle="bold"
                                  android:textColor="@android:color/white"
                                  android:layout_margin="8dp"
                        />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <TextView
                            android:id="@+id/tv_stats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/layout_title_stats"
                            app:layout_constraintLeft_toLeftOf="parent"
                    />


                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/layout_title_procons"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/tv_stats"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:background="@drawable/bg">

                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:id="@+id/tv_title_procons"
                                  android:text="@string/pros_amp_cons"
                                  app:layout_constraintTop_toTopOf="parent"
                                  app:layout_constraintLeft_toLeftOf="parent"
                                  app:layout_constraintBottom_toBottomOf="parent"
                                  android:textSize="@dimen/h3"
                                  android:textStyle="bold"
                                  android:textColor="@android:color/white"
                                  android:layout_margin="8dp"
                        />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                            android:id="@+id/tv_procons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/layout_title_procons"
                            app:layout_constraintLeft_toLeftOf="parent"
                    />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>